bug fix: where views were hidden behind background

--- a/frontend/src/app/auth/auth/auth.component.css
+++ b/frontend/src/app/auth/auth/auth.component.css
@@ -1,6 +1,6 @@
 .custom-bg {
   background: url("../../../assets/img/banner.jpg") no-repeat center fixed;
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
